--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="register">Register</string>
     <string name="et_phone_hint">Enter your phone number</string>
     <string name="et_email_hint">Enter your Email</string>
+    <string name="et_password_hint">Enter your password</string>
 </resources>
